- Fallen logs can rarely spawn on water
- Fallen logs can no longer spawn on ice and other non terrain blocks (added tag for them)
- Fallen log decoration (moss and vines) are now biome temperature and humidify dependent. No more moss in snowy biomes
- Freestanding ladders will now break off the wall when you break the top block
- Matrix Enchanting Table appears in creative if automaticallyConvert is off
- Fixed Skull Pikes not functioning when there's a block on top, by lowering the detection point
- Fixed Hanging sign recipes using log instead of stripped log
- Fixed pickarang logic for hardness calculation not using the item correctly. AS a consequence this fixes some exploits with it
- Pickarang will now emit block particles when hitting a block it cant break
- Creative players can break any block with a pickarang
- Added unique pickarang damage type and death message
- Added a (temporary) beach zombie villager texture