@@ -1,0 +1,18 @@
+package org.violetmoon.quark.mixin.mixins.accessor;
+
+import com.mojang.datafixers.util.Either;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.LevelHeightAccessor;
+import net.minecraft.world.level.chunk.ChunkAccess;
+import net.minecraft.world.level.levelgen.structure.pools.SinglePoolElement;
+import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.gen.Accessor;
+
+@Mixin(ChunkAccess.class)
+public interface AccessorChunkAccess {
+
+    @Accessor("levelHeightAccessor")
+    LevelHeightAccessor getLevelHeightAccessor();
+
+}
