@@ -1,0 +1,17 @@
+package org.violetmoon.quark.mixin.mixins.accessor;
+
+import com.mojang.datafixers.util.Either;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.levelgen.structure.pools.SinglePoolElement;
+import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate;
+import org.checkerframework.checker.units.qual.A;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.gen.Accessor;
+
+@Mixin(SinglePoolElement.class)
+public interface AccessorSinglePoolElement {
+
+    @Accessor("template")
+    Either<ResourceLocation, StructureTemplate> getTemplate();
+
+}
