@@ -20,6 +20,7 @@
     "BlockItemMixin",
     "BoatMixin",
     "CeilingHangingSignBlockMixin",
+    "ChunkGeneratorMixin",
     "ClimateParameterPointMixin",
     "ConcretePowderBlockMixin",
     "CreativeModeTabsMixin",
@@ -76,9 +77,11 @@
     "accessor.AccessorAbstractArrow",
     "accessor.AccessorAbstractChestedHorse",
     "accessor.AccessorBlockItem",
+    "accessor.AccessorChunkAccess",
     "accessor.AccessorLivingEntity",
     "accessor.AccessorMerchantOffer",
     "accessor.AccessorServerGamePacketListener",
+    "accessor.AccessorSinglePoolElement",
     "accessor.AccessorTemptingSensor",
     "self.IZetaBlockMixin_FAKE",
     "self.IZetaItemMixin_FAKE"
